implemented PUT for domain request details, added ktlint and kover to project
